# hero-api

./: .env  Cargo.toml  README.md
migrations/2021-11-07-151541_heroes/: down.sql  up.sql
src/: db.rs  hero.rs  main.rs  schema.rs
